--- a/component/header.html
+++ b/component/header.html
@@ -5,7 +5,7 @@
             <ul>
                 <li><a href="home.html"><div class="nav-box">Home</div></a></li>
                 <li><a href="aqi-by-country.html"><div class="nav-box">AQI by Country</div></a></li>
-                <li><a href="learn-about-aqi.html"><div class="nav-box">Learn about AQI</div></a></li>
+                <li><a href="what-is-aqi.html"><div class="nav-box">What is AQI?</div></a></li>
             </ul>
         </nav>
     </div>
