styling home.html

--- a/component/header.html
+++ b/component/header.html
@@ -1,11 +1,16 @@
 <header>
-    <div class="header-content">
-        <h1>SEAirSense</h1>
-        <nav>
+    <div class="header">
+        <nav class="left-nav">
             <ul>
-                <li><a href="home.html"><div class="nav-box">Home</div></a></li>
-                <li><a href="aqi-by-country.html"><div class="nav-box">AQI by Country</div></a></li>
-                <li><a href="what-is-aqi.html"><div class="nav-box">What is AQI?</div></a></li>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="aqi-by-country.html">AQI by Country</a></li>
+            </ul>
+        </nav>
+        <h1>SEAirSense</h1>
+        <nav class="right-nav">
+            <ul>
+                <li><a href="what-is-aqi.html">What is AQI?</a></li>
+                <li><a href="another-page.html">Another Page</a></li>
             </ul>
         </nav>
     </div>
