--- a/css/styles.css
+++ b/css/styles.css
@@ -1,127 +1,7 @@
-html, body {
-    height: 100%;
-}
-
-.wrapper {
-    display: flex;
-    flex-direction: column;
-}
-
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    padding-top: 75px;
-}
-
-header {
-    background-color: #333;
-    color: #fff;
-    padding: 5px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 1000;
-}
-
-.header-content {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-header h1 {
-    padding: 0px 0px 0px 15px;
-}
-
-nav ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-.nav-box {
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: #3f3f3f;
-    border-radius: 5px;
-}
-
-nav ul li {
-    display: inline;
-    margin-right: 3px;
-}
-
-nav ul li a {
-    color: #fff;
-    text-decoration: none;
-}
-
-main {
-    flex: 1;
-    padding: 20px;
-}
-
-section {
-    margin-bottom: 30px;
-}
-
-footer {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 10px;
-    position: relative;
-    bottom: 0;
-}
-
-#map {
-    width: 70%;
-    height: 500px;
-}
-
-/* Tablets */
-@media (max-width: 768px) {
-    header, footer {
-        padding: 15px;
-    }
-
-    #map {
-        height: 300px;
-    }
-
-    nav ul li {
-        display: block;
-        margin: 10px 0;
-    }
-
-    nav ul li a {
-        display: block;
-    }
-}
-
-/* Smartphones */
-@media (max-width: 480px) {
-    header, footer {
-        padding: 10px;
-    }
-
-    #map {
-        height: 250px;
-    }
-
-    nav ul li {
-        display: block;
-        margin: 5px 0;
-    }
-
-    nav ul li a {
-        display: block;
-        padding: 10px;
-        background-color: #444;
-        margin-bottom: 5px;
-    }
-}
+@import url('base.css');
+@import url('header.css');
+@import url('footer.css');
+@import url('layout.css');
+@import url('banner.css');
+@import url('map.css');
+@import url('responsive.css');
