--- a/css/banner.css
+++ b/css/banner.css
@@ -66,7 +66,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.45);
-    mix-blend-mode: multiply; /* Blend mode to darken the image */
+    mix-blend-mode: multiply;
     border-radius: 0px 10px 10px 0px;
 }
 
@@ -75,5 +75,5 @@
     height: 100%;
     object-fit: cover;
     border-radius: 0px 10px 10px 0px;
-    mix-blend-mode: multiply; /* Apply blend mode to the image */
+    mix-blend-mode: multiply;
 }
