--- a/component/header.html
+++ b/component/header.html
@@ -10,7 +10,7 @@
         <nav class="right-nav">
             <ul>
                 <li><a href="what-is-aqi.html">What is AQI?</a></li>
-                <li><a href="another-page.html">Another Page</a></li>
+                <li><a href="health-and-safety.html">Health & Safety</a></li>
             </ul>
         </nav>
     </div>
