--- a/css/header.css
+++ b/css/header.css
@@ -4,7 +4,8 @@ header {
     background-color: #fff;
     color: #333;
     position: fixed;
-    padding: 25px;
+    padding-top: 25px;
+    padding-bottom: 25px;
     top: 0;
     left: 0;
     width: 100%;
@@ -14,8 +15,25 @@ header {
 
 .header {
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: space-between;
+}
+
+.left-nav {
+    display: flex;
+    justify-content: flex-end;
+    width: 40%;
+}
+
+.right-nav {
+    display: flex;
+    justify-content: flex-start;
+    width: 40%;
+}
+
+.header .center {
+    width: 20%;
+    text-align: center;
 }
 
 header h1 {
@@ -50,16 +68,9 @@ nav ul {
     display: flex;
 }
 
-nav.left-nav ul {
-    margin-right: 50px;
-}
-
-nav.right-nav ul {
-    margin-left: 50px;
-}
-
 nav ul li {
-    margin: 0 10px;
+    margin-left: 15px;
+    margin-right: 15px;
 }
 
 nav ul li a {
@@ -67,7 +78,6 @@ nav ul li a {
     text-decoration: none;
     font-size: 1em;
     font-weight: 600;
-    padding: 5px 10px;
     transition: color 0.3s ease;
 }
 
