--- a/css/styles.css
+++ b/css/styles.css
@@ -1,19 +1,14 @@
 /* CSS for All HTML */
 
-@import url('base.css');
+@import url('layout.css');
+
 
 /* CSS for Components */
 
 @import url('header.css');
 @import url('footer.css');
 
-/* CSS for Homepage */
 
-@import url('layout.css');
-@import url('banner.css');
-@import url('map.css');
-@import url('aqi_table.css');
-
-/* CSS for Different View */
+/* CSS for Responsive View */
 
 @import url('responsive.css');
