--- a/css/layout.css
+++ b/css/layout.css
@@ -1,4 +1,11 @@
-/* Main Content Styles */
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    font-family: 'Helvetica Neue', Arial, sans-serif;
+    background-color: #f4f4f9;
+    color: #333;
+}
 
 main {
     flex: 1;
@@ -7,9 +14,14 @@ main {
     padding: 100px 20px 20px 20px;
 }
 
-/* Section Content Styles */
-
-section {
+section {   
     margin-top: 30px;
-    margin-bottom: 25px;
+    margin-bottom: 50px;
+}
+
+section h2 {
+    font-size: 2.5em;
+    text-align: center;
+    font-weight: bold;
+    color: #00967d
 }
