--- a/component/header.html
+++ b/component/header.html
@@ -1,13 +1,13 @@
 <header>
-    <div class="header">
-        <nav class="left-nav">
+    <div id="header">
+        <nav id="left-nav">
             <ul>
                 <li><a href="home.html">Home</a></li>
                 <li><a href="aqi-by-country.html">AQI by Country</a></li>
             </ul>
         </nav>
         <h1>SEAirSense</h1>
-        <nav class="right-nav">
+        <nav id="right-nav">
             <ul>
                 <li><a href="what-is-aqi.html">What is AQI?</a></li>
                 <li><a href="health-and-safety.html">Health & Safety</a></li>
