--- a/css/layout.css
+++ b/css/layout.css
@@ -19,7 +19,7 @@ section {
     margin-bottom: 50px;
 }
 
-section h2 {
+h2 {
     font-size: 2.5em;
     text-align: center;
     font-weight: bold;
